[package]
name = "pixware"
version = "0.1.0"
edition = "2021"

[lib]
name = "pixware"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# # Error handling
# thiserror = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
walkdir = "2"

[[bench]]
name = "walk_dir"
harness = false
